Fix missing use of runSync in RuleEngine (#92)